# fractal-renderer

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README-eng.md  README.md  main.c  main.cpp
.github/workflows/: ci.yml
include/: bmp.h  bmp.hpp  bmp_colors.hpp  bmp_io.h  bmp_io.hpp  bmp_structs.hpp  color.hpp  complex.hpp  mesh.hpp  quaternion.hpp  vec3.hpp
include/adapters/: raylib_image_adapter.hpp
include/bmp/: bmp.hpp  bmp_colors.hpp  bmp_io.hpp  bmp_structs.hpp
include/bmp/colors/: bmp_colors.hpp
include/bmp/io/: bmp_io.hpp
include/fractal/: abstract_fractal_renderer.hpp  complex_fractal.hpp  concrete_fractals.hpp  fractal.hpp  fractal_animation.hpp  fractal_camera.hpp  fractal_concretes.hpp  fractal_renderer.hpp  fractal_renderer_builder.hpp  fractal_structures.hpp
include/fractal/inl/: fractal_renderer.inl  fractal_renderer_builder.inl
include/math/: complex.hpp  constants.hpp  quaternion.hpp  ray.hpp  vec3.hpp
include/objmodel/: mesh.hpp
include/raster/: interface_pixeled.hpp
include/rasterizer/: interface_pixeled.hpp  pixeled_concept.hpp  rasterizer.hpp
include/ray_tracing/: hittable_interface.hpp
include/ray_tracing/objects/: sphere.hpp
include/util/: logger.hpp
include/utils/: logger.hpp
src/: bmp.c  bmp.cpp  bmp_io.c  bmp_io.cpp  complex.cpp  main.c  main.cpp  quaternion.cpp
src/bmp/: bmp.cpp  bmp_io.cpp
src/fractal/: abstract_fractal_renderer.cpp  complex_fractal.cpp  complex_fractal2.cpp  concrete_fractals.cpp  fractal.cpp  fractal_animation.cpp  fractal_camera.cpp  fractal_concretes.cpp  fractal_renderer.cpp  fractal_renderer_builder.cpp
src/math/: complex.cpp  quaternion.cpp  vec3.cpp
src/rasterizer/: rasterizer.cpp
src/ray_tracing/objects/: sphere.cpp
tests/: CMakeLists.txt
tests/bmp/: CMakeLists.txt  test_bmp.cpp
tests/math/: CMakeLists.txt  test_complex.cpp  test_quaternion.cpp  test_vec3.cpp
usage_examples/: CMakeLists.txt  draw_julia_set.cpp  draw_mandelbrot_set.cpp  render_animation_mandelbrot.cpp
